2005-11-06  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Delete .requestAttachedStop.
	* TestProcStates.java: Delete .requestAttachedStop.
	* ProcState.java: Delete .processRequestAttachedStop, and
	.StoppingAllTasks.

	* TestTaskAttachedObserver.java: Replace
	.testAddObserverToOneMainDetachedTask with
	testAttachDetachMainTask.
	* Observation.java: Add .delete.
	* ProcState.java: In "running" state, handle
	.processPerformDeleteObservation.
	* Observable.java: Notify when an observer is deleted.

	* TaskState.java: Add state "attached".
	* ProcState.java: When unattached, and RequestAddObserver
	transition to attached state.  Delay enabling Observations until
	after the attach has completed.
	* TestTaskAttachedObserver.java: New.

	* TaskState.java: Delete .processRequestAddObserver, and
	.processRequestDeleteObserver.
	* Task.java: Re-implement .requestAddObserver and
	.requestDeleteObserver to pass the request, as an Observation, to
	the Task's Proc.
	* ProcState.java: Add .processPerformAddObservation.
	* Proc.java: Add .observations, .performAddObservation, and
	.performDeleteObservation.
	* Observation.java: New.
	
2005-11-05  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Replace TaskObservable, and ProcObservable with
	ObservableXXX.
	* Host.java: Replace ProcObservable with ObservableXXX.
	* ProcObservable.java: Delete.
	* TaskObservable.java: Refactor, creating Observable.
	* Observable.java: New.

2005-11-04  Jeff Johnston  <jjohnstn@redhat.com>

	* LinuxIa32.java: Add constructor that sets
	wordSize and byteOrder.
	* LinuxX8664.java: Ditto plus add in register
	and SyscallEventInfo data.

2005-11-04  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Add .getTasks, and .getChildren.  Replace .children
	with private .childPool.
	* TestProcGet.java: Test Proc.getTasks and .getChildren.
	* TestRefresh.java: Update.

2005-11-03  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Refactor constructors.